--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,10 +1,10 @@
 <header class="main-header">
     <nav class="menu">
       <ul class="menu-list">
-        <li><a href="#">Home</a></li>
+        <li><a routerLink="/">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Services</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a routerLink="contact">Contact</a></li>
       </ul>
     </nav>
     <div class="social-buttons">
