--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -2,39 +2,38 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #fff;
+    background-color: #1b58304a;
     border-bottom: 1px solid #ccc;
     padding: 10px;
   }
   
   .menu {
     display: flex;
-  }
-  
-  .menu-list {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-  }
-  
-  .menu-list li {
-    margin-right: 10px;
-  }
-  
-  .menu-list li:last-child {
-    margin-right: 0;
-  }
-  
-  .menu-list li a {
-    color: #333;
-    text-decoration: none;
-    padding: 10px;
-    transition: color 0.2s;
-  }
-  
-  .menu-list li a:hover {
-    color: #000;
+
+    &-list {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      display: flex;
+
+      li { 
+        margin-right: 10px;
+        a {
+          background: linear-gradient(90deg, #3f51b5, transparent) #419be4;
+          color: #f2ebeb;
+          text-decoration: none;
+          padding: 10px;
+          transition: color 0.2s;
+          border-radius: 4px;
+
+          &:hover {
+            cursor: pointer;
+            background: #e91e63;
+          }
+        }
+      }
+      li:last-child { margin-right: 0; }
+    }
   }
   
   .social-buttons {
