feat: add language and some components

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,10 +1,10 @@
 <header class="main-header">
     <nav class="menu">
       <ul class="menu-list">
-        <li><a routerLink="/">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a routerLink="contact">Contact</a></li>
+        <li><a routerLink="/">{{'HEADER.HOME' | translate}}</a></li>
+        <li><a href="#">{{'HEADER.ABOUT' | translate}}</a></li>
+        <li><a routerLink="note">{{'HEADER.NOTE' | translate}}</a></li>
+        <li><a routerLink="contact">{{'HEADER.CONTACT' | translate}}</a></li>
       </ul>
     </nav>
     <div class="social-buttons">
