--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -1,72 +1,9 @@
-.main-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #1b58304a;
-    border-bottom: 1px solid #ccc;
-    padding: 10px;
-  }
-  
-  .menu {
-    display: flex;
-
-    &-list {
-      list-style: none;
-      margin: 0;
-      padding: 0;
-      display: flex;
-
-      li { 
-        margin-right: 10px;
-        a {
-          background: linear-gradient(90deg, #3f51b5, transparent) #419be4;
-          color: #f2ebeb;
-          text-decoration: none;
-          padding: 10px;
-          transition: color 0.2s;
-          border-radius: 4px;
-
-          &:hover {
-            cursor: pointer;
-            background: #e91e63;
-          }
-        }
-      }
-      li:last-child { margin-right: 0; }
-    }
-  }
-  
-  .social-buttons {
-    display: flex;
-  }
-  
-  .social-button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50px;
-    height: 50px;
-    margin-left: 10px;
-    border-radius: 50%;
-    background-color: #333;
-    color: #fff;
-    text-decoration: none;
-    transition: background-color 0.2s;
-  }
-  
-  .social-button:hover {
-    background-color: #4267B2;
-  }
-  
-  .facebook {
-    background-color: #3B5998;
-  }
-  
-  .twitter {
-    background-color: #1DA1F2;
-  }
-  
-  .instagram {
-    background-color: #C13584;
-  }
-  
+.container {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  position: relative;
+  z-index: 1222;
+}
