feat: add admin, contact, about pages

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,8 +1,8 @@
-<header class="flex justify-between items-center p-2 h-14 bg-neutral-400">  
+<header class="flex justify-between items-center p-8 h-14 bg-neutral-400">  
   <img src="assets/img/logo.jpg" alt="logo" width="80px" height="80px">
   <nav class="h-7">
     <div class="container">
-      <a class="link" routerLink="/">{{'HEADER.HOME' | translate}}</a>
+      <a class="link" routerLink="home">{{'HEADER.HOME' | translate}}</a>
       <a class="link" routerLink="about">{{'HEADER.ABOUT' | translate}}</a>
       <a class="link" routerLink="note">{{'HEADER.NOTE' | translate}}</a>
       <a class="link" routerLink="contact">{{'HEADER.CONTACT' | translate}}</a>
