--- a/src/app/core/components/footer/footer.component.scss
+++ b/src/app/core/components/footer/footer.component.scss
@@ -1,71 +1,75 @@
-// .footer {
-//   background-color: #1b58304a;
-//   padding: 20px 0;
+:host {
+  margin-top: auto;
+}
 
-//   .container {
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//   }
+.footer {
+  background-color: #1b58304a;
+  padding: 20px 30px;
 
-//   .footer-content {
-//     display: flex;
-//     justify-content: space-between;
-//     align-items: center;
-//     flex-wrap: wrap;
+  .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
-//     .footer-left {
-//       flex: 1;
+  .footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
 
-//       h4 {
-//         font-size: 18px;
-//         font-weight: bold;
-//       }
+    .footer-left {
+      flex: 1;
 
-//       p {
-//         font-size: 14px;
-//         margin-top: 10px;
-//       }
-//     }
+      h4 {
+        font-size: 18px;
+        font-weight: bold;
+      }
 
-//     .footer-right {
-//       display: flex;
-//       align-items: center;
+      p {
+        font-size: 14px;
+        margin-top: 10px;
+      }
+    }
 
-//       .social-icons {
-//         list-style: none;
-//         margin: 0;
-//         padding: 0;
+    .footer-right {
+      display: flex;
+      align-items: center;
 
-//         li {
-//           display: inline-block;
-//           margin-right: 10px;
+      .social-icons {
+        list-style: none;
+        margin: 0;
+        padding: 0;
 
-//           a {
-//             color: #333;
-//             font-size: 20px;
+        li {
+          display: inline-block;
+          margin-right: 10px;
 
-//             &:hover {
-//               color: #777;
-//             }
-//           }
-//         }
-//       }
+          a {
+            color: #333;
+            font-size: 20px;
 
-//       .contact-info {
-//         display: flex;
-//         align-items: center;
-//         margin-left: 20px;
+            &:hover {
+              color: #777;
+            }
+          }
+        }
+      }
 
-//         i {
-//           margin-right: 5px;
-//         }
+      .contact-info {
+        display: flex;
+        align-items: center;
+        margin-left: 20px;
 
-//         span {
-//           font-size: 14px;
-//           margin-right: 10px;
-//         }
-//       }
-//     }
-//   }
-// }
+        i {
+          margin-right: 5px;
+        }
+
+        span {
+          font-size: 14px;
+          margin-right: 10px;
+        }
+      }
+    }
+  }
+}
