--- a/src/app/modules/home/components/landing/landing.component.scss
+++ b/src/app/modules/home/components/landing/landing.component.scss
@@ -1,34 +1,36 @@
-// main {
-//     background-color: rgb(148, 148, 146);
-// }
+main {
+  padding: 15px 30px;
+}
 
-// .main-img {
-//     height: 400px;
-//     background: url('/assets/img/men-playing-guitar-handsome-young-man-pictures_csp16301188.webp') no-repeat center center;
-// }
+.main-img {
+    height: 400px;
+    background: url('/assets/img/men-playing-guitar-handsome-young-man-pictures_csp16301188.webp') no-repeat center center;
+}
 
-// .grid {
-//     display: grid;
-//     grid-template-columns: repeat(3, 1fr); // Three columns with equal width
-//     grid-gap: 10px; // Gap between blocks
+.grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); // Three columns with equal width
+    grid-gap: 20px; // Gap between blocks
     
-//     @media (max-width: 768px) {
-//       grid-template-columns: repeat(2, 1fr); // Two columns for smaller screens
-//     }
+    @media (max-width: 768px) {
+      grid-template-columns: repeat(2, 1fr); // Two columns for smaller screens
+    }
     
-//     @media (max-width: 480px) {
-//       grid-template-columns: 1fr; // Single column for mobile screens
-//     }
-//   }
+    @media (max-width: 480px) {
+      grid-template-columns: 1fr; // Single column for mobile screens
+    }
+  }
   
-//   .block {
-//     background-color: #ccc;
-//     padding: 20px;
-//     text-align: center;
-//     cursor: pointer;
+  .block {
+    background-color: #ccc;
+    text-align: center;
+    cursor: pointer;
 
-//     img {
-//       width: 200px;
-//     }
-//   }
+    img {
+      display: block;
+      margin: 0 auto;
+      padding: 8px;
+      width: 200px;
+    }
+  }
   
