chore: some changes

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="flex justify-between items-center p-8 h-14 bg-neutral-400">  
+<header class="flex justify-between items-center p-8 h-14 bg-header">  
   <img src="assets/img/logo.jpg" alt="logo" width="80px" height="80px">
   <nav class="h-7">
     <div class="container">
