--- a/src/app/modules/home/components/landing/landing.component.html
+++ b/src/app/modules/home/components/landing/landing.component.html
@@ -1,4 +1,4 @@
-<main class="bg-slate-300">
+<main class="bg-main px-[30px] py-[15px]">
   <div class="main-img"></div>
 
   <div class="grid mt-10">
