--- a/src/app/modules/home/components/landing/landing.component.scss
+++ b/src/app/modules/home/components/landing/landing.component.scss
@@ -1,6 +1,6 @@
 .main-img {
     height: 400px;
-    background: url('/assets/img/men-playing-guitar-handsome-young-man-pictures_csp16301188.webp') no-repeat center center;
+    background: url('/assets/img/514vpsx7NwL._SX354_SY354_BL0_QL100__UXNaN_FMjpg_QL85_.jpg') no-repeat center center;
 }
 
 .grid {
